# fern

./: README.md  environment.yaml  pyproject.toml
checkpoints/: model.pt
checkpoints/tokenizers/: tes2304.tok
fern/: config.py  data.py  model.py  rope.py  tokenizer.py  utils.py
notebooks/: inference.ipynb  train-tokenizer.ipynb  train.ipynb
